--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,6 +1,6 @@
 baseURL: http://localhost:8787
 languageCode: en-us
-title: House Spotting
+title: Life Spotting
 paginate: 10
 caches:
   getresource:
