--- a/.github/workflows/syncMainDevelopmentBranches.yml
+++ b/.github/workflows/syncMainDevelopmentBranches.yml
@@ -1,24 +1,19 @@
-name: Sync
+name: Sync branch
+
 on:
   push:
     branches:
       - main
 
 jobs:
-  sync-branches:
+  sync-branch:
+    name: Update test branch
     runs-on: ubuntu-latest
-    name: Syncing branches
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Set up Node
-        uses: actions/setup-node@v1
+      - name: Checkout repository
+        uses: actions/checkout@master
+      - uses: connor-baer/action-sync-branch@main
         with:
-          node-version: 12
-      - name: Opening pull request
-        id: pull
-        uses: tretuna/sync-branches@1.4.0
-        with:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          FROM_BRANCH: "main"
-          TO_BRANCH: "development"
+          branch: development
+          token: ${{ secrets.GITHUB_TOKEN }}
+          force: false
