--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 publish = "public"
-command = "hugo"
+command = "cd remote && hugo && cd .. && hugo"
 
 [build.environment]
   GO_VERSION = "1.20.2"
